# llm

./: .gitignore  README.md  fe.py  hf_agent.py  pyproject.toml  requirements.txt  slse.py
src/llm/: fe.py  hf_agent.py
src/llm/common/: models.py
src/llm/pages/: search_files.py  web_searchbot.py
src/llm/services/: search_store_service.py  web_search_service.py
tests/: test_llm.py
